# probabilistic_bisector

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: binomial_simulation.rs  gaussian_linear.rs  stochastic_logistic.rs
proptest-regressions/: distribution.txt  interval.txt
proptest-regressions/distribution/: update.txt
src/: _distribution.rs  distribution.rs  error.rs  evolution.rs  interval.rs  intervals.rs  lib.rs  result.rs  root.rs  scaling.rs  semimeet.rs  solver.rs  support.rs
src/distribution/: dist.rs  mod.rs  update.rs
tests/: alternating.rs  brent.rs  deterministic.rs  heteroscedastic.rs  integration.rs  logistic.rs
