[package]
name = "probabilistic_bisector"
version = "0.1.6"
edition = "2024"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
description = "bisection for one-dimensional functions in the presence of noise"
repository = "https://github.com/cgubbin/probabalistic_bisector"

[dependencies]
confi = "0.2"
num-traits = "0.2.19"
thiserror = "2"
tracing = "0.1.41"
trellis-runner = "0.3.3"

[dev-dependencies]
approx = "0.5.1"
proptest = "1.9.0"
rand = "0.10.1"
rand_distr = "0.6.0"

